--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.2.0",
     "react-countup": "^6.2.0",
     "react-dom": "^17.0.2",
+    "react-google-button": "^0.7.2",
     "react-icons": "^4.3.1",
     "react-moving-text": "^0.0.7",
     "react-router-dom": "^6.2.2",
