--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-google-button": "^0.7.2",
     "react-icons": "^4.3.1",
     "react-moving-text": "^0.0.7",
+    "react-read-more-read-less": "^1.0.7",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
+    "read-more-react": "^1.0.10",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
