--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^2.0.16",
     "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
+    "react-cookie-consent": "^7.5.0",
     "react-countup": "^6.2.0",
     "react-dom": "^17.0.2",
     "react-google-button": "^0.7.2",
