--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-countup": "^6.2.0",
     "react-dom": "^17.0.2",
     "react-google-button": "^0.7.2",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-moving-text": "^0.0.7",
     "react-read-more-read-less": "^1.0.7",
