--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
+    "emailjs-com": "^3.2.0",
     "firebase": "^8.8.0",
     "nodemon": "^2.0.19",
     "react": "^17.0.2",
